# url-shortener

./: .env.example  Makefile  README.md  deploy.sh  docker-compose.yaml  init-db.sh
.github/workflows/: ci.yml  typecheck.yml
analytics/: .flake8  Dockerfile  main.py  pyproject.toml  requirements.txt
analytics/app/: config.py  constants.py  dependencies.py  models.py  repository.py  routes.py  service.py
analytics/app/db/: objects.py  session.py
analytics/app/grpc/: analytics_pb2_grpc.py  server.py
analytics/app/grpc/protos/: analytics_pb2_grpc.py
analytics/app/routes/: analytics.py  health.py
analytics/migrations/: env.py
analytics/migrations/versions/: 27d0f89911af_create_analytics_and_clicks_tables.py  e5df3838f4cd_initial_tables_for_analytics_service.py
analytics/tests/: conftest.py
analytics/tests/integration/: test_repository.py
analytics/tests/unit/: test_models.py  test_service.py
frontend/: Dockerfile  nginx.conf
frontend/public/: app.js  index.html
k8s/: README.md  network-policies.yaml  pdb.yaml  rbac.yaml
k8s/analytics/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/gke/: cloud-sql-proxy.yaml
k8s/infrastructure/: metrics-server.yaml  nginx-ingress-controller.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
k8s/scripts/: check-health.sh  deploy.sh  port-forward.sh  stop-port-forward.sh
k8s/shared/: ingress-public.yaml  ingress.yaml  secrets.yaml
k8s/shortener/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/storage/: postgres-statefulset.yaml  redis-statefulset.yaml
proto/: analytics.proto
shortener/: .dockerignore  Dockerfile  main.py  mypy.ini  pyproject.toml  requirements.txt
shortener/app/: config.py  constants.py  dependencies.py  exceptions.py  models.py  repository.py  routes.py  service.py
shortener/app/db/: objects.py  session.py
shortener/app/grpc/: client.py
shortener/app/grpc/protos/: analytics_pb2.py
shortener/app/middleware/: rate_limiting.py
shortener/app/routes/: health.py  urls.py
shortener/migrations/: env.py
shortener/migrations/versions/: 751cde01b58a_initial_schema_with_url_model.py  8eed2484d755_create_urls_table.py  c0aa6f50b987_initial_schema_with_url_model.py  d1829c8520bf_create_urls_table.py
shortener/tests/: conftest.py
shortener/tests/integration/: test_repository.py  test_routes.py
shortener/tests/unit/: test_models.py  test_service.py
